# rgbd-slam-tutorial-gx

./: .gitignore  README.md
part I/: CMakeLists.txt  part-1.aux  part-1.tex
part I/auto/: part-1.el
part I/src/: CMakeLists.txt  main.cpp
part II/: part-2.aux  part-2.tex
part II/code/src/: CMakeLists.txt
part II/src/: CMakeLists.txt  generatePointCloud.cpp
part III/: CMakeLists.txt
part III/code/: CMakeLists.txt
part III/code/src/: CMakeLists.txt  slamBase.cpp
part III/include/: slamBase.h  slamBase.h~
part III/src/: CMakeLists.txt  detectFeatures.cpp  generatePointCloud.cpp  main.cpp
part IV/: parameters.txt
part IV/include/: slamBase.h
part IV/src/: CMakeLists.txt  joinPointCloud.cpp  slamBase.cpp
part V/: CMakeLists.txt  parameters.txt
part V/include/: slamBase.h
part V/src/: CMakeLists.txt  slamBase.cpp
part VI/: CMakeLists.txt  parameters.txt
part VI/data/: result_after.g2o  result_before.g2o
part VI/include/: slamBase.h
part VI/src/: CMakeLists.txt  detectFeatures.cpp  joinPointCloud.cpp  slamBase.cpp  slamEnd.cpp
part VII/: CMakeLists.txt  parameters.txt  result_after.g2o  result_before.g2o
part VII/cmake_modules/: FindCSparse.cmake
part VII/include/: slamBase.h
part VII/src/: CMakeLists.txt  detectFeatures.cpp  slam.cpp  slamBase.cpp  visualOdometry.cpp
